--- a/index.html
+++ b/index.html
@@ -16,31 +16,31 @@
 </head>
 <body>
   <div class="progress-bar"></div>
-
   <div class="loader">
     <div class="loader-spinner"></div>
   </div>
-
-  <button class="toc-toggle" id="toc-toggle">≡</button>
-  <button class="theme-toggle" id="theme-toggle">☀</button>
-
+  
+  <!-- Side Table of Contents -->
   <div class="toc" id="toc">
     <h3>Table of Contents</h3>
     <div class="toc-links" id="toc-links"></div>
   </div>
-
+  
+  <button class="toc-toggle" id="toc-toggle">≡</button>
+  <button class="theme-toggle" id="theme-toggle">☾</button>
+  
   <div class="error-msg" id="error-msg"></div>
   
   <div class="book-container" id="book-container">
     <div class="book" id="book"></div>
   </div>
-
+  
   <div class="controls">
     <button class="nav-btn prev-btn" id="prev-btn">&larr;</button>
     <div class="page-indicator" id="page-indicator">Page 1 / 1</div>
     <button class="nav-btn next-btn" id="next-btn">&rarr;</button>
   </div>
-
+  
   <script src="script.js"></script>
 </body>
 </html>
